v 1.4.0
- mesh uncooking
- importing, exporting with out directory
- better UI

v 1.3.6
- added cr2w serialization and deserialization to/from json and xml
- fixed some bugs related to the archivemanagers
- added a user_hashes.txt file to parse additional hashes

v 1.3.5
- added compress option to the oodle command in the CLI
- use oodle kraken to compress the archivehashes
- diff archive option for git diff
- better texture dump output
- added archive command