@@ -1,6 +1,6 @@
 {
   "GameDirectory": "D:\\Program Files\\Steam\\steamapps\\common\\Cyberpunk 2077",
   "WriteToFile": true,
-  "LIMIT": 1000,
+  "LIMIT": 100,
   "KEEP": true
 }
