@@ -1,7 +1,8 @@
 v 1.4.0
-- mesh uncooking
+- mesh uncooking, exporting and importing
 - importing, exporting with out directory
 - better UI
+- more command options
 
 v 1.3.6
 - added cr2w serialization and deserialization to/from json and xml
